fixing buttons, two option visible

--- a/css/gadget.css
+++ b/css/gadget.css
@@ -1,8 +1,8 @@
 
 .checkbox-wrapper-34 {
-  --blue: green ;
+  /* --blue: green ;
   --g08: #333;
-  --g04: #eee;
+  --g04: #eee; */
   align-self: center;
   /* margin-right: 30px; */
 }
@@ -60,14 +60,15 @@
   /*Definimos el estilo de la etiqueta segun la primera clase de nuestro checkbox*/
   outline: 0;
   display: block;
-  width: 120px;
-  height: 56px;
+  width: 110px;
+  height: 50px;
   position: relative;
   cursor: pointer;
   user-select: none;
-  font-size: 18px;
+  font-size: 16px;
+  letter-spacing: 1px;
   /* font-weight: 400; */
-  font-family: 'Drustic Dialy';
+  font-family: 'Drustic Dialy Condensed';
   text-transform: uppercase;
   color: #fff;
 }
@@ -81,9 +82,11 @@
   /*Definimos el contenido para la etiqueta segun la primera clase de nuestro checkbox*/
   /*Esta clase define el texto que sera visto en las opciones*/
   position: relative;
-  display: block; /*Se comportará como un bloque*/
+  display: flex; /*Se comportará como un bloque*/
+  align-items: center;
+  justify-content: center;
   content: "";    /*El contenido sera vacio, pero luego añadiremos el texto de las opciones comida y tragos*/
-  width: 44%;
+  width: 55%;
   height: 100%;
 }
 
@@ -97,18 +100,18 @@
   /*Cuando no se ha marcado, el contenido vacio se inserta sobre la etiqueta*/
   /* display: inline; */
   position: absolute;
-  top: 32.5%;
+  /* top: 32.5%; */
 }
 .checkbox-wrapper-34 .tgl:checked + .tgl-btn:after,
 .checkbox-wrapper-34 .tgl:checked + .tgl-btn2:after,
 .checkbox-wrapper-34 .tgl:checked + .tgl-btni:after {
   /*Cuando se ha marcado el contenido vacio sera empujado al otro lado*/
-  left: 56.5%;
+  left: 46%;
 }
 
 .checkbox-wrapper-34 .tgl-ios + .tgl-btn, .checkbox-wrapper-34 .tgl-ios + .tgl-btn2, .checkbox-wrapper-34 .tgl-ios + .tgl-btni {
   /*Definimos el estilo para la etiqueta segun la segunda clase de nuestro checkbox*/
-  background: var(--g08);
+  background: #333;
   border-radius: 20rem;
   padding: 2px;
   /* transition: all 0.4s ease; */
@@ -116,41 +119,60 @@
 }
 .checkbox-wrapper-34 .tgl-ios + .tgl-btn:after, .checkbox-wrapper-34 .tgl-ios + .tgl-btn2:after {
   /*Definimos el contenido para la etiqueta segun la segunda clase*/
+  content: "Comida";
   border-radius: 2em;
   background: #feb000;
   /* transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.3s ease, margin 0.3s ease; */
   /* box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2); */
 }
 
-.checkbox-wrapper-34 .tgl-ios + .tgl-btni:after {
+.checkbox-wrapper-34 .tgl-ios + .tgl-btni:after { /* boton sin check */
+  content: "Espanol";
   border-radius: 2em;
-  background: #eee;
+  background: grey  ;
+}
+
+.checkbox-wrapper-34 .tgl-ios + .eng2:after {
+  /*Definimos el contenido para la etiqueta segun la segunda clase*/
+  content: "Food";
+  border-radius: 2em;
+  background: #feb000;
+  /* transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.3s ease, margin 0.3s ease; */
+  /* box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2); */
+}
+
+.checkbox-wrapper-34 .tgl-ios + .eng:after { 
+  content: "English";
+  border-radius: 2em;
+  background: grey  ;
 }
 
 .checkbox-wrapper-34 .tgl-ios + .tgl-btn:before {
-  content: "Comida";
-  left: 50%;
-  color: var(--g04);
+  content: "Tragos";
+  bottom: 2%;
+  left: 48%;
+  color: grey;
   /* transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275); */
 }
-.checkbox-wrapper-34 .tgl-ios + .tgl-btni:before {
-  content: "Español";
-  left: 46%;
-  color: var(--g04);
+.checkbox-wrapper-34 .tgl-ios + .tgl-btni:before { /*fondo sin check */
+  content: "Ingles";
+  left: 48%;
+  bottom: 1%;
+  color: grey;
   /* transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275); */
 }
 
-.checkbox-wrapper-34 .tgl-ios + .eng:before {
+.checkbox-wrapper-34 .tgl-ios + .eng:before { /*ENG - fondo sin check*/
   content: "Spanish";
-  left: 46%;
-  color: var(--g04);
+  left: 48%;
+  color: grey;
   /* transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275); */
 }
 
 .checkbox-wrapper-34 .tgl-ios + .eng2:before {
-  content: "Food";
-  left: 56%;
-  color: var(--g04);
+  content: "Drinks";
+  left: 49%;
+  color: grey;
   /* transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275); */
 }
 
@@ -161,6 +183,13 @@
   padding-right: 0.4em;
 } */
 .checkbox-wrapper-34 .tgl-ios:checked + .tgl-btn:after {
+  content: "Tragos";
+  background: #00724d;
+  transition: all 200ms ease;
+}
+
+.checkbox-wrapper-34 .tgl-ios:checked + .eng2:after {
+  content: "Drinks";
   background: #00724d;
   transition: all 200ms ease;
 }
@@ -171,28 +200,28 @@
   margin-left: -0.4em;
 } */
 .checkbox-wrapper-34 .tgl-ios:checked + .tgl-btn:before {
-  content: "Tragos";
-  left: 8%;
+  content: "Comida";
+  left: 0;
   /* color: #fff; */
 }
 
 .checkbox-wrapper-34 .tgl-ios:checked + .tgl-btni:before {
   content: "Ingles";
-  left: 12%;
+  left: 0%;
   /* color: #fff; */
 }
 
 .checkbox-wrapper-34 .tgl-ios:checked + .eng:before {
-  content: "English";
-  left: 8%;
-  color: var(--g04);
+  content: "Spanish";
+  left: -2%;
+  color: grey;
   /* transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275); */
 }
 
 .checkbox-wrapper-34 .tgl-ios:checked + .eng2:before {
-  content: "Drinks";
-  left: 12%;
-  color: var(--g04);
+  content: "Food";
+  left: 2%;
+  color: grey;
   /* transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275); */
 }
 
